aktualizacja EmployeeController: @Valid na POST/PUT, HATEOAS
- dodanie @Valid do saveNewEmployee i updateEmployee
- zwracane EntityModel/CollectionModel z linkami self i employer (jesli przypisany)